# AiModelAcessTech

./: LICENSE  README.md
ChatServer/: CMakeLists.txt  ChatServer.cpp  ChatServer.h  main.cpp
ChatServer/required/: main需求.txt  前端界面生成
sdk/: CMakeLists.txt
sdk/include/: ChatGPTProvider.h  ChatSDK.h  DataManager.h  DeepSeekProvider.h  LLMManager.h  LLMProvider.h  OllamaProvider.h  SessionManager.h  common.h
sdk/include/util/: myLog.h
sdk/src/: ChatGPTProvider.cpp  ChatSDK.cpp  DataManager.cpp  DeepSeekProvider.cpp  LLMManager.cpp  OllamaProvider.cpp  SessionManager.cpp
sdk/src/util/: myLog.cpp  myLog.hpp
test/: CMakeLists.txt  LLMtest.cpp
